# vega-view

./: .gitignore  Cargo.toml  README.md  download-vega.nu  example.json  page-with-download.html  vega.nu
src/: main.rs  vega-all.js  vega-page.html
