[package]
name = "vega-view"
description = "Display nushell tables using Vega Lite in a webview"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cuprous-au/vega-view"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
wry = "0.41"
tao = "0.28"
